--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/swagger": "^4.8.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "join": "^3.0.0",
+    "joi": "^17.4.0",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
     "reflect-metadata": "^0.1.13",
