--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -53,6 +54,7 @@
     "@types/jest": "^26.0.22",
     "@types/mongodb": "^3.6.16",
     "@types/node": "^14.14.36",
+    "@types/passport-google-oauth20": "^2.0.7",
     "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
